Fixed bug with "jumping" imgs

--- a/webdev/css/styles.css
+++ b/webdev/css/styles.css
@@ -63,7 +63,7 @@ transform: translateX(-50%);;z-index: -1;}
 .div4 .items div.foreground{color:#fff;background-color:rgba(0,0,0,0.5);position:absolute;width:100%;height:100%;left:0;top:0;display:flex;-ms-align-items:center;align-items:center;justify-content:space-around;text-align:center;opacity:0;-webkit-transition:.5s;-o-transition:.5s;transition:.5s}
 .div4 .items div.foreground p{font-size:20px;font-weight:400;line-height:22px;letter-spacing:1px;margin-bottom:10px;text-transform:uppercase}
 .div4 .items div.foreground span{font-size:15px;font-weight:400;line-height:22px;letter-spacing:.75px}
-.div4 .items div img{width:100%;height:100%}
+.div4 .items div img{width:100%;height:100%;display:block}
 button.viewAll{padding:28px 62px;margin-top:129px;background-color:#00897b;border:0;color:#fff;font-family:Roboto;font-size:20px;font-weight:700;line-height:22px;text-transform:uppercase;letter-spacing:1px}
 @media(max-width: 768px) {
 .div4 .items{grid-template-columns:1fr 1fr}
